se agrega el favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Busca Tips</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
 </head>
 <body>
   
