creo libreriaFunciones, valido dato input

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       </select>
     </div>
     <div class="contenedorBuscador">
-      <input type="text" placeholder="Ingresa Búsqueda">
-      <button>Buscar</button>
+      <input type="text" placeholder="Ingresa Búsqueda" id="txtDatoBuscado">
+      <button id="btnBuscar">Buscar</button>
     </div>
-    <div class="contenedorResultados"></div>
+    <div class="contenedorResultados" id="contenedorResultados"></div>
   </div>
-  <script src="js/script.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
