correccion mobile final

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <hr />
     </div>
     <div class="contenedorCategorias">
-      <p>Selecciona Lenguaje: </p>
+      <p>Lenguaje: </p>
       <select id="selectorCategorias">
         <option value="json/git.json">Git</option>
         <option value="json/html.json">Html</option>
@@ -29,8 +29,8 @@
     <div class="contenedorBuscador">
 
       <label class="label">
-        <input type="text" placeholder="" id="txtDatoBuscado" class="input">
-        <span class="span">Ingresa Búsqueda</span>
+        <input type="text" class="input" placeholder=" " autocomplete="off">
+        <span class="span">Ingresa Busqueda</span>
       </label>
 
       <button id="btnBuscar">Buscar</button>
