--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="contenedorBuscador">
 
       <label class="label">
-        <input type="text" class="input" placeholder=" " autocomplete="off">
+        <input type="text" class="input" id="txtBusqueda" placeholder=" " autocomplete="off">
         <span class="span">Ingresa Busqueda</span>
       </label>
 
@@ -38,7 +38,7 @@
 
     <div class="contenedorResultados" id="contenedorResultados"></div>
   </div>
-  <script type="module" src="js/script.js"></script>
+  <script  type="module" src="js/script.js"></script>
 </body>
 
 </html>
