Funcionalidad de busqueda de items

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
       <button id="btnBuscar">Buscar</button>
     </div>
 
-    <div class="contenedorResultados" id="contenedorResultados"></div>
+    <div class="contenedorResultados" id="contenedorResultados">
+      <ul id="listaResultados"></ul>
+    </div>
+    
   </div>
-  <script  type="module" src="js/script.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
