Agrego tips y opción Seleccionar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <legend class="legend">Buscador de Tips</legend>
       <p class="lblLenguaje">Lenguaje: </p>
       <select id="selectorCategorias" class="selectorCategorias">
+        <option value="json/Seleccionar.json">Seleccionar</option>
         <option value="json/git.json">Git</option>
         <option value="json/html.json">Html</option>
         <option value="json/css.json">Css</option>
@@ -26,7 +27,7 @@
     </fieldset>
 
     <div class="contenedorResultados" id="contenedorResultados">
-      <ul id="listaResultados"></ul>
+      <ul class="listaResultados" id="listaResultados"></ul>
     </div>
 
   </div>
