Aumento ancho contenedor, recupero flecha select

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <div class="contenedorGeneral">
 
-    <fieldset class="fieldset">
-      <legend class="legend">Buscador de Tips</legend>
-      <p class="lblLenguaje">Lenguaje: </p>
+    <fieldset class="fieldSet" id="fieldSet">
+      <legend class="legend">DevTips</legend>
+      <p class="lblLenguaje">Categoría: </p>
       <select id="selectorCategorias" class="selectorCategorias">
         <option value="json/Seleccionar.json">Seleccionar</option>
         <option value="json/git.json">Git</option>
