coloco fondo y transparencias

--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 </head>
 
 <body>
-  <div class="contenedorGeneral">
+  <div class="fullContainer">
 
-    <fieldset class="fieldSet" id="fieldSet">
-      <legend class="legend">DevTips</legend>
-      <p class="lblLenguaje">Categoría: </p>
-      <select id="selectorCategorias" class="selectorCategorias">
-        <option value="json/Seleccionar.json">Seleccionar</option>
-        <option value="json/git.json">Git</option>
-        <option value="json/html.json">Html</option>
-        <option value="json/css.json">Css</option>
-        <option value="json/javascript.json">JavaScript</option>
-      </select>
-    </fieldset>
-
-    <div class="contenedorResultados" id="contenedorResultados">
-      <ul class="listaResultados" id="listaResultados"></ul>
+    <div class="contenedorGeneral">
+      <fieldset class="fieldSet" id="fieldSet">
+        <legend class="legend">DevTips</legend>
+        <p class="lblLenguaje">Categoría: </p>
+        <select id="selectorCategorias" class="selectorCategorias">
+          <option value="json/Seleccionar.json">Seleccionar</option>
+          <option value="json/git.json">Git</option>
+          <option value="json/html.json">Html</option>
+          <option value="json/css.json">Css</option>
+          <option value="json/javascript.json">JavaScript</option>
+        </select>
+      </fieldset>
+      <div class="contenedorResultados" id="contenedorResultados">
+        <ul class="listaResultados" id="listaResultados"></ul>
+      </div>
     </div>
-
+    
   </div>
 
   <script type="module" src="js/script.js"></script>
