Agrego iconos a cada categoria

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 <body>
   <div class="fullContainer">
-
     <div class="contenedorGeneral">
       <fieldset class="fieldSet" id="fieldSet">
+
         <legend class="legend">DevTips</legend>
+
         <p class="lblLenguaje">Categoría: </p>
         <select id="selectorCategorias" class="selectorCategorias">
           <option value="json/Seleccionar.json">Seleccionar</option>
@@ -25,12 +26,18 @@
           <option value="json/css.json">Css</option>
           <option value="json/javascript.json">JavaScript</option>
         </select>
+
+        <div class="contenedorLogoTech" >
+          <img src="" id="contenedorLogoTech" alt="">
+        </div>
+          
       </fieldset>
+
       <div class="contenedorResultados" id="contenedorResultados">
         <ul class="listaResultados" id="listaResultados"></ul>
       </div>
+
     </div>
-    
   </div>
 
   <script type="module" src="js/script.js"></script>
