separo tips con borde inferior, organizo alto automatico de listado

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="contenedorGeneral">
       <fieldset class="fieldSet" id="fieldSet">
 
-        <legend class="legend">DevTips</legend>
+        <legend class="legend">HarDevTips</legend>
 
         <p class="lblLenguaje">Categoría: </p>
         <select id="selectorCategorias" class="selectorCategorias">
