Organizo posicion modal y agrego tips de sistemas

--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
 
           <select id="selectorCategorias" class="selectorCategorias">
             <option value="json/Seleccionar.json">Seleccionar</option>
+            <option value="json/sistemas.json">Sistemas</option>
             <option value="json/git.json">Git</option>
-            <option value="json/html.json">Html</option>
-            <option value="json/css.json">Css</option>
-            <option value="json/javascript.json">JavaScript</option>
           </select>
           
         </div>
