Ajustes fondo pantalla

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="fullContainer">
+  <!-- <div class="fullContainer"> -->
     <div class="contenedorGeneral">
       <fieldset class="fieldSet" id="fieldSet">
 
@@ -42,7 +42,7 @@
       </div>
 
     </div>
-  </div>
+  <!-- </div> -->
 
   <script type="module" src="js/script.js"></script>
 </body>
