--- a/index.html
+++ b/index.html
@@ -2,11 +2,6 @@
 <html lang="es">
 
 <head>
-  <meta name="description" content="Tips de temas relacionados con la ecnologia y la programación web">
-  <meta name="MobileOptimized" content="width">
-  <meta name="HandheldFriendly" content="true">
-
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Busca Tips</title>
@@ -14,7 +9,7 @@
   <link rel="stylesheet" href="css/inputGoogle.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
