--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Busca Tips</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/inputGoogle.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./json/manifest.json">
 </head>
 
 <body>
