--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
-  <link rel="manifest" href="./json/manifest.json">
+  <link rel="manifest" href="json/manifest.json">
 </head>
 
 <body>
