--- a/index.html
+++ b/index.html
@@ -2,17 +2,33 @@
 <html lang="es">
 
 <head>
+  <!-- Titulo Principal (Pestaña Browser) -->
+  <title>Busca Tips</title>
+
+  <!-- Configuración etiquetas Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Busca Tips</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#193257">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="description" content="Bienvenid@s a HarDevTips, tu asisente para recordar tips de tecnologia!">
+
+  <!-- Enlaces de archivos para configuracion del sitio y PWA -->
+  <link rel="shortcut icon" type="image/png" href="imagenes/favicons/brackets.png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="imagenes/pwa/Code128.png">
+  <link rel="apple-touch-startup-image" href="./imagenes/pwa/Code128.png">
   <link rel="manifest" href="manifest.json">
+
 </head>
 
 <body>
     <div class="contenedorGeneral">
+
       <fieldset class="fieldSet" id="fieldSet">
 
         <legend class="legend">HarDevTips</legend>
@@ -24,7 +40,7 @@
           </div>
 
           <select id="selectorCategorias" class="selectorCategorias">
-            <option value="json/Seleccionar.json">Seleccionar</option>
+            <option value="json/seleccionar.json">Seleccionar</option>
             <option value="json/sistemas.json">Sistemas</option>
             <option value="json/git.json">Git</option>
           </select>
@@ -41,6 +57,7 @@
       </div>
 
     </div>
+
   <script type="module" src="js/script.js"></script>
 </body>
 
