--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="apple-touch-icon" href="imagenes/pwa/Code128.png">
-  <link rel="apple-touch-startup-image" href="imagenes/pwa/Code128.png">
+  <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
+    href="imagenes/pwa/Code128.png">
   <link rel="manifest" href="manifest.json">
 
 </head>
